attached_assets/Pasted--bu-problemi-nece-hell-edim-rest-express-1-0-0-build-client-vite-build-failed-to-load--1743597014824.txt
"bu problemi nece hell edim ?  "
> rest-express@1.0.0 build:client
> vite build

failed to load config from /home/runner/workspace/vite.config.ts
error during build:
file:///home/runner/workspace/vite.config.ts.timestamp-1743596871417-7164b4a528ffc.mjs:6
import { removeConsole } from "file:///home/runner/workspace/node_modules/vite-plugin-remove-console/dist/index.mjs";
         ^^^^^^^^^^^^^
SyntaxError: The requested module 'file:///home/runner/workspace/node_modules/vite-plugin-remove-console/dist/index.mjs' does not provide an export named 'removeConsole'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:189:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:530:24)
    at async loadConfigFromBundledFile (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:66876:15)
    at async loadConfigFromFile (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:66717:24)
    at async resolveConfig (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:66317:24)
    at async build (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:65405:18)
    at async CAC.<anonymous> (file:///home/runner/workspace/node_modules/vite/dist/node/cli.js:829:5) ""Bu səhv çox aydın və spesifik bir məsələyə işarə edir:

SyntaxError: The requested module ... does not provide an export named 'removeConsole'

🧠 Səbəb:
Sənin vite.config.ts faylında aşağıdakı sətr var (çox güman):

ts
Copy
Edit
import { removeConsole } from "vite-plugin-remove-console";
Amma vite-plugin-remove-console plugin-i default export-dur, named export deyil. Yəni sən removeConsole adlı export istifadə etməyə çalışırsan, amma əslində o, default-dur.

✅ Həll Yolu:
Addım 1: vite.config.ts faylında düzgün import yaz:
ts
Copy
Edit
import removeConsole from "vite-plugin-remove-console";
Yəni sadəcə default export olaraq istifadə etməlisən.

Addım 2: Plugin-i vite.config.ts içində istifadə et:
ts
Copy
Edit
import { defineConfig } from "vite";
import react from "@vitejs/plugin-react";
import removeConsole from "vite-plugin-remove-console";

export default defineConfig({
  plugins: [
    react(),
    removeConsole(), // Burada işlədilir
  ],
});
💡 Əlavə Tövsiyə:
Əgər sadəcə production mühitində console.log-ları silmək istəyirsənsə:

ts
Copy
Edit
removeConsole({
  external: ['src/excluded-file.ts'], // istisna fayllar
}),c  "bu problemi nece hell edim ?  "
> rest-express@1.0.0 build:client
> vite build

failed to load config from /home/runner/workspace/vite.config.ts
error during build:
file:///home/runner/workspace/vite.config.ts.timestamp-1743596871417-7164b4a528ffc.mjs:6
import { removeConsole } from "file:///home/runner/workspace/node_modules/vite-plugin-remove-console/dist/index.mjs";
         ^^^^^^^^^^^^^
SyntaxError: The requested module 'file:///home/runner/workspace/node_modules/vite-plugin-remove-console/dist/index.mjs' does not provide an export named 'removeConsole'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:189:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:530:24)
    at async loadConfigFromBundledFile (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:66876:15)
    at async loadConfigFromFile (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:66717:24)
    at async resolveConfig (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:66317:24)
    at async build (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-CevzF2vT.js:65405:18)
    at async CAC.<anonymous> (file:///home/runner/workspace/node_modules/vite/dist/node/cli.js:829:5) ""Bu səhv çox aydın və spesifik bir məsələyə işarə edir:

SyntaxError: The requested module ... does not provide an export named 'removeConsole'

🧠 Səbəb:
Sənin vite.config.ts faylında aşağıdakı sətr var (çox güman):

ts
Copy
Edit
import { removeConsole } from "vite-plugin-remove-console";
Amma vite-plugin-remove-console plugin-i default export-dur, named export deyil. Yəni sən removeConsole adlı export istifadə etməyə çalışırsan, amma əslində o, default-dur.

✅ Həll Yolu:
Addım 1: vite.config.ts faylında düzgün import yaz:
ts
Copy
Edit
import removeConsole from "vite-plugin-remove-console";
Yəni sadəcə default export olaraq istifadə etməlisən.

Addım 2: Plugin-i vite.config.ts içində istifadə et:
ts
Copy
Edit
import { defineConfig } from "vite";
import react from "@vitejs/plugin-react";
import removeConsole from "vite-plugin-remove-console";

export default defineConfig({
  plugins: [
    react(),
    removeConsole(), // Burada işlədilir
  ],
});
💡 Əlavə Tövsiyə:
Əgər sadəcə production mühitində console.log-ları silmək istəyirsənsə:

ts
Copy
Edit
removeConsole({
  external: ['src/excluded-file.ts'], // istisna fayllar
}),